--- a/map_test/views/test_page.erb
+++ b/map_test/views/test_page.erb
@@ -15,6 +15,9 @@
         var emit = function(key, value) {
           mockOutput[key] = value;
         }
+        var ObjectId = function() {
+            return null;
+        }
         
         var mongoMapper = <%= mapper_function %>
         
@@ -23,10 +26,10 @@
             var boundMap = _.bind(mongoMapper, record);
             boundMap();
             
-            var resultText = "Population: " +mockOutput[null].population.length.toString() + '\n' +
-                             "Denominator: " + mockOutput[null].denominator.length.toString() + '\n' +
-                             "Numerator: "+ mockOutput[null].numerator.length.toString() + '\n' +
-                             "Exclusions: "+ mockOutput[null].exclusions.length.toString();
+            var resultText = "Population: " +mockOutput[null].population.toString() + '\n' +
+                             "Denominator: " + mockOutput[null].denominator.toString() + '\n' +
+                             "Numerator: "+ mockOutput[null].numerator.toString() + '\n' +
+                             "Exclusions: "+ mockOutput[null].exclusions.toString();
             $('#result').val(resultText)
         };
     
